--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 </title>
 
 <head>
+    <meta property=’og:title’ content='Colour Quest'/>
+    <meta property=’og:image’ content='assets/rgb-svgrepo-com.svg'>
+    <meta property=’og:description’ content='DESCRIPTION OF YOUR SITE'/>
+    <meta property=’og:url’ content='https://attium.github.io/colour-quest/'/>
+    <meta property='og:image:width' content='70' />
+    <meta property='og:image:height' content='70' />
     <style>
         #game {
             font-size: 20px;
